# AIDApp-core

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.rst  calcs.py  coord.py  coordinates.py  display.py  fly.toml  fly_test.toml  graphs.py  gui.py  gui.spec  main.py  requirements.txt  setup.cfg  setup.py  user_input.py
.github/workflows/: fly-deploy-test.yml  fly-deploy.yml  main.yml  pre-commit.yml  publish.yml  release.yml  testing.yml
docs/: conf.py  index.rst
res/: icon.icns
res/storey_data_template/: storey_data_template.txt
src/: calcs.py  coordinate_handler.py  coordinates.py  display.py  file_handler.py  graph.py  gui.py  input_coordinates.py  linguist.qrc  linguist_rc.py  main.py  ntc.py  strings.py
src/aidapp/: __init__.py  calcs.py  coordinates.py  file_handler.py  graph.py  gui.py  linguist_rc.py  main.py  ntc.py  rc_linguist.py  strings.py  test_aidapp.py  utils.py
src/aidapp/api/: main.py
src/aidapp/api/models/: model.py
src/aidapp/api/routers/: admin.py
src/aidapp/api/schemas/: schema.py
src/translations/: aidapp_it.qm  aidapp_it.ts
tests/: conftest.py  test_2_aidapp.py  test_aidapp.py  test_endpoints.py  test_main_aidapp.py  test_payload.json
